Created web view

--- a/Timelapse/Timelapse/templates/index.html
+++ b/Timelapse/Timelapse/templates/index.html
@@ -1,1 +1,7 @@
-asdf
+{% extends 'base.html'%}
+{% block title %} test {% endblock %}
+
+
+{% block content %}
+<h3>Choose a date</h3>
+{% endblock %}
