--- a/Timelapse/Timelapse/templates/base.html
+++ b/Timelapse/Timelapse/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    {% block title %} {% endblock %}
+    <title>{% block title %} {% endblock %}</title>
 </head>
 
 <body class="w3-content" style="max-width:1200px">
@@ -19,7 +19,7 @@
     <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
         <div class="w3-container w3-display-container w3-padding-16">
             <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-            <h3 class="w3-wide"><b>LOGO</b></h3>
+            <h3 class="w3-wide"><b>APT</b></h3>
         </div>
         <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
             {% for d in dates %}
@@ -46,7 +46,7 @@
 
         <!-- Top header -->
         <header class="w3-container w3-xlarge">
-            <p class="w3-left">Auto image taker</p>
+            <p class="w3-left">Marco und Pascal</p>
             <p class="w3-right">Team 03
             </p>
         </header>
