--- a/Timelapse/Timelapse/templates/images.html
+++ b/Timelapse/Timelapse/templates/images.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-{% block title %} test {% endblock %}
+{% block title %} AutoPictureTaker {% endblock %}
 
 
 {% block content %}
@@ -22,7 +22,12 @@
 </style>
 <div class="w3-content w3-display-container" style="max-width:800px">
     {% for img in timelapseImages %}
-    <img class="mySlides" src="{{img.image}}" style="width:100%">
+    <div class="w3-display-container mySlides">
+      <img src="{{img.image}}" style="width:100%">
+      <div class="w3-display-topleft w3-large w3-container w3-padding-16 w3-black">
+        {{img.time}}
+      </div>
+    </div>
     {% endfor %}
     <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
         <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
@@ -46,20 +51,15 @@
         showDivs(slideIndex = n);
     }
 
-    function showDivs(n) {
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("demo");
-        if (n > x.length) { slideIndex = 1 }
-        if (n < 1) { slideIndex = x.length }
-        for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" w3-white", "");
-        }
-        x[slideIndex - 1].style.display = "block";
-        dots[slideIndex - 1].className += " w3-white";
-    }
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
 </script>
 {% endblock %}
